@@ -1,3 +1,8 @@
+2007-12-18  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/chart/plot/IntervalMarker.java
+    (IntervalMarker(double, double, Paint)): New constructor.
+
 2007-12-05  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* source/org/jfree/chart/HashUtilities.java
